--- a/src/main/resources/static/templates/header.html
+++ b/src/main/resources/static/templates/header.html
@@ -2,13 +2,19 @@
     <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
         <div class="container">
             <div class="navbar-header">
-                <a class="navbar-brand" href="#">Spring Music <span class="glyphicon glyphicon-music"></span></a>
+                <a class="navbar-brand" href="#">Spring Music!!!! <span class="glyphicon glyphicon-music"></span></a>
                 <ul class="navbar-nav">
                     <!--<li></li>-->
                 </ul>
             </div>
 
             <ul class="nav navbar-nav navbar-right">
+                <li>
+                    <a href="#" ng-click="toggleRefreshStatus()">
+                        <span ng-show="refreshEnabled">Disable Refresh</span></span>
+                        <span ng-show="!refreshEnabled">Enable Refresh</span></span>
+                    </a>
+                </li>
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                         <span class="glyphicon glyphicon-info-sign icon-white"></span>
