--- a/src/main/resources/static/css/app.css
+++ b/src/main/resources/static/css/app.css
@@ -18,6 +18,16 @@
     background-image: linear-gradient(top, #008a00, #006b00);
 }
 
+.navbar .container.blue {
+    background-color: #1c92d2;
+    background-image: -moz-linear-gradient(top, #1c92d2, #fcfcfe);
+    background-image: -ms-linear-gradient(top, #1c92d2, #fcfcfe);
+    background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#1c92d2), to(#fcfcfe));
+    background-image: -webkit-linear-gradient(top, #1c92d2, #fcfcfe);
+    background-image: -o-linear-gradient(top, #1c92d2, #fcfcfe);
+    background-image: linear-gradient(top, #1c92d2, #fcfcfe);
+}
+
 .navbar .navbar-brand {
     color: white;
 }
