--- a/src/main/resources/static/css/app.css
+++ b/src/main/resources/static/css/app.css
@@ -8,7 +8,7 @@
     margin-bottom: 20px;
 }
 
-.navbar .container {
+.navbar .container.green {
     background-color: #008a00;
     background-image: -moz-linear-gradient(top, #008a00, #006b00);
     background-image: -ms-linear-gradient(top, #008a00, #006b00);
